# ruff-setup-ignores

./: .gitignore  LICENSE  pyproject.toml  tox.ini
ruff_setup_ignores/: __init__.py  __main__.py
tests/: test_ruff_setup_ignores.py
tests/toml_files/: pyprojecttoml_with_per_file_ignores.toml  pyprojecttoml_without_per_file_ignores.toml  rufftoml_with_per_file_ignores.toml  rufftoml_with_tool_ruff_prefix.toml
