[tool.poetry]
name = "ruff-setup-ignores"
version = "0.0.0"
description = ""
authors = ["Iuri de Silvio <iurisilvio@gmail.com>"]
readme = "README.md"
packages = [{include = "ruff_setup_ignores"}]

[tool.poetry.dependencies]
python = "^3.7"
toml = "*"
ruff = ">=0.0.242"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
addopts = "--capture=no --cov --cov-report term --cov-report xml --black --ruff"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
